--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,21 @@
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/EvenTicks
-    username: root
-    password: 1234
-
-  jpa:
-    hibernate:
-      ddl-auto: update
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/EvenTicks
+#    username: root
+#    password: 1234
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#
+#  mail:
+#    host: smtp.gmail.com
+#    port: 587
+#    username: info.eventicks@gmail.com
+#    password: jxcw qhyt ejsu ekze
+#    properties:
+#      mail:
+#        smtp:
+#          auth: true
+#          starttls:
+#            enable: true
